# cbio_py

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
src/cbio_py/: cbio_mod  cbio_mod.py
src/cbio_py.egg-info/: PKG-INFO  top_level.txt
src/cbio_py_odagayev.egg-info/: PKG-INFO  SOURCES.txt
