[metadata]
name = cbio_py
version = 0.0.4.39
author = Sasha Dagayev
description = This is a python client for the cBioPortal API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/odagayev/cancer_module_cbio
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    bravado > 11.0.0

[options.packages.find]
where = src